--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           go-version: '^1.18'
       - name: Test
-        run: go test -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+        run: go test -v -race -timeout 20m -coverprofile=coverage.txt -covermode=atomic ./...
       - name: Coverage
         uses: codecov/codecov-action@v3
         with:
